--- a/ios/AwesomeProject/Info.plist
+++ b/ios/AwesomeProject/Info.plist
@@ -51,5 +51,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>UIAppFonts</key>
+    <array>
+      <string>Roboto-Regular.ttf</string>
+      <string>Roboto-Bold.ttf</string>
+    </array>
 </dict>
 </plist>
