--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.66.4"
+    "react-native": "0.66.4",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,6 +26,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["assets/fonts/Roboto"]
+    "assets": [
+      "assets/fonts/Roboto"
+    ]
   }
 }
